terminadado  a correção e refatoracao do teste do nota service, corrigido alguns outros problemas nas classes relacionadas tbm